update RhombusesGenerator to support dynamic board size